# cinnabar

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md  go.work  go.work.sum  plan.md
app/: Cargo.toml
app/src/: actor_store.rs  app.rs  args.rs  asset_startup.rs  block_entity_visuals.rs  camera.rs  culling.rs  environment.rs  hotbar.rs  lib.rs  local_player.rs  main.rs  metrics.rs  model_witness.rs  movement.rs  network.rs  present_mode.rs  semantic_controls.rs  server_position.rs  settings_runtime.rs  transparent_witness.rs  ui_runtime.rs  world_stream.rs
app/src/acceptance/: actor_pose.rs  actor_witness.rs  actor_witness_tests.rs  exit.rs  markers.rs  mod.rs  model_witness.rs  mutation.rs  proofs.rs  remesh.rs  teleport.rs  transparent_witness.rs  world_ready.rs
app/src/asset_startup/: diagnostic.rs  hud.rs  hud_carrier.rs  icon_carrier.rs  lang_carrier.rs
app/src/camera/: tests.rs
app/src/environment/: numeric.rs  profile_lookup.rs
app/src/metrics/: diagnostics.rs  report.rs  tests.rs
app/src/movement/: authority.rs  correction_tests.rs  integration_tests.rs  physics.rs
app/src/presentation/: actors.rs  mod.rs
app/src/runtime/: endpoint.rs  mod.rs  network.rs  phase2_evidence.rs  phase3_evidence.rs  publication.rs  shutdown.rs  telemetry.rs  visibility.rs  world.rs
app/src/runtime/network/: session.rs
app/src/semantic_controls/: physical.rs
app/src/tests/: camera.rs  camera_controls.rs  cohort_epoch.rs  core.rs  finish.rs  inventory.rs  mod.rs  phase2_evidence.rs  phase4_presentation.rs  publication.rs  teleport.rs
app/src/tests/finish/: completion.rs
app/src/tests/phase4_presentation/: custom_geometry.rs  login_authority.rs  ui_authority.rs
app/src/ui_runtime/: chat_input.rs  gameplay_authority.rs  gameplay_hud.rs  gameplay_touch.rs  hud_adapter.rs  interaction.rs  inventory_router.rs  item_facts.rs  platform_clipboard.rs  presentation.rs  raw_text_resolution.rs  render_adapter.rs  scoreboard_adapter.rs  tests.rs
app/src/ui_runtime/presentation/: chat.rs  hud_layout.rs  retained_hud.rs  survival_hud.rs  tests.rs  texture_atlas.rs
app/src/ui_runtime/tests/: chat_tests.rs  gameplay_hud_tests.rs  leniency_tests.rs  retained_bounds_tests.rs
app/tests/: assets.rs  camera.rs  hud_assets.rs  inventory_router.rs  lang_assets.rs  movement.rs  physics_assets.rs
app/tests/assets/: make_targets.rs
crates/asset-compiler/: Cargo.toml
crates/asset-compiler/src/: animation.rs  atmosphere.rs  biome.rs  compiler.rs  entity.rs  font.rs  hud.rs  icon.rs  image.rs  lang.rs  lib.rs  pack.rs
crates/asset-compiler/src/entity/: animation.rs  (+6 more)
crates/asset-compiler/tests/: atmosphere.rs  biome.rs  compiler.rs  entity.rs  entity_animation.rs  font.rs  hud.rs  item_visuals.rs  pack.rs  public_font_api.rs  public_outline_font_api.rs
crates/assets/: Cargo.toml
crates/assets/data/: biome-registry-v1001.sha256  block-item-routes-v1001.json  block-light-registry-v1001.sha256  block-physics-v1001.sha256  block-registry-v1001.sha256
crates/assets/src/: animation.rs  atmosphere.rs  biome.rs  blob.rs  compiled.rs  compiler.rs  entity.rs  environment_settings.rs  error.rs  font.rs  hud.rs  icon.rs  image.rs  item.rs  lang.rs  lib.rs  light_registry.rs  model.rs  pack.rs  physics_registry.rs  registry.rs  runtime.rs  texture.rs
crates/assets/tests/: atmosphere.rs  biome.rs  blob.rs  compiler.rs  entity.rs  environment_settings.rs  font.rs  hud.rs  icon.rs  item.rs  lang.rs  light_registry.rs  pack.rs  physics_registry.rs  public_completion_carriers.rs  runtime.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: endpoint.rs  error.rs  framed.rs  lib.rs
crates/bridge/tests/: go_echo.rs
crates/client-world/: Cargo.toml
crates/client-world/src/: action.rs  actor_animation.rs  actor_store.rs  block_entity_visuals.rs  culling.rs  item.rs  lib.rs  publication_config.rs  stream.rs
crates/client-world/tests/: entity_runtime.rs  item_actions.rs
crates/meshing/: Cargo.toml
crates/meshing/src/: biome.rs  classifier.rs  cloud.rs  color.rs  connectivity.rs  contributors.rs  lib.rs  lighting.rs  liquid.rs  publication.rs  types.rs
crates/meshing/tests/: biome.rs  cloud_mesh.rs  lighting.rs  liquid.rs  mesh.rs
crates/protocol/: Cargo.toml  DEVIATIONS.md
crates/protocol/fixtures/: manifest.json
crates/protocol/src/: actor.rs  blob_cache.rs  codec.rs  inventory.rs  item.rs  lib.rs  login.rs  movement.rs  packet.rs  raw_text.rs  socket_transport.rs  ui.rs  world.rs
crates/protocol/tests/: actors.rs  available_commands.rs  biome_definition_list.rs  blob_cache.rs  chat_send.rs  crafting_data.rs  creative_content.rs  fixtures.rs  hud_state_packets.rs  inventory_packets.rs  items_actions.rs  login.rs  login_collection_bounds.rs  login_state.rs  material_reducer.rs  player_auth_input.rs  player_list.rs  raw_text.rs  ui_packets.rs  world_collection_bounds.rs  world_packets.rs
crates/render/: Cargo.toml
crates/render/src/: actor.rs  actor.wgsl  actor_render.rs  atmosphere.rs  atmosphere.wgsl  atmosphere_render.rs  biome.rs  biome_tint.wgsl  chunk.wgsl  cloud.wgsl  cloud_config.rs  cloud_render.rs  lib.rs  lighting.rs  lighting.wgsl  liquid.rs  liquid.wgsl  mesh.rs  model.wgsl  plugin.rs  present_mode.rs  ui.rs  ui.wgsl  ui_render.rs  visibility_diagnostics.rs
crates/render/tests/: actor_rig.rs  atmosphere.rs  biome.rs  biome_shader.rs  cloud_config.rs  cloud_mesh.rs  cloud_render.rs  lighting.rs  liquid.rs  liquid_shader.rs  mesh.rs  plugin.rs  present_mode_policy.rs  ui_render.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: runtime_assets_decode.rs  sub_chunk_decode.rs
tools/architecture/: Cargo.toml  policy.toml
tools/architecture/src/: completion_plan.rs  dependencies.rs  lib.rs  main.rs  markers.rs  paths.rs  policy.rs  sources.rs
tools/architecture/tests/: policy.rs
tools/phase2-evidence/: Cargo.toml
tools/phase2-evidence/src/: lib.rs  main.rs
tools/phase2-evidence/tests/: cli.rs
tools/visualcoverage/: Cargo.toml
tools/visualcoverage/src/: lib.rs  main.rs
tools/visualcoverage/tests/: ratchet.rs
(+556 files in other folders)
