[workspace]
members = [
    "app",
    "crates/asset-compiler",
    "crates/assets",
    "crates/bridge",
    "crates/client-world",
    "crates/meshing",
    "crates/protocol",
    "crates/render",
    "crates/sim",
    "crates/world",
    "tools/visualcoverage",
    "tools/architecture",
    "tools/devtool",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"

[workspace.dependencies]
bevy = { version = "=0.18.1", default-features = false }
tokio = "1.52"
tokio-util = "0.7"
bytes = "1"
futures = "0.3"
anyhow = "1"
thiserror = "2"
rayon = "1.11"
