[package]
name = "asset-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
assets = { path = "../assets" }
clap = { version = "4", features = ["derive"] }
fontdue = { version = "0.9.3", default-features = false, features = ["std"] }
image = { version = "0.25", default-features = false, features = ["png", "tga"] }
same-file = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
