[package]
name = "assets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bitflags = "2"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
