[package]
name = "bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "net"] }
tokio-util = { workspace = true, features = ["codec"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", default-features = false, features = ["process"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
