[package]
name = "meshing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
assets = { path = "../assets" }
bytemuck = { version = "1", features = ["derive"] }
world = { path = "../world" }

[dev-dependencies]
asset-compiler = { path = "../asset-compiler" }
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"
