[package]
name = "protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bridge = { path = "../bridge" }
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
valentine = { path = "vendor/valentine", default-features = false, features = ["bedrock_1_26_30"] }
jolyne = { path = "vendor/jolyne", default-features = false, features = ["client"] }

[dev-dependencies]
aes = "0.8"
base64 = "0.22"
ctr = "0.9"
flate2 = "1"
jsonwebtoken = "9.3"
p384 = { version = "0.13", features = ["ecdh", "pkcs8"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snap = "1.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
