[package]
name = "render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
assets = { path = "../assets" }
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_log",
    "bevy_mesh",
    "bevy_render",
    "bevy_shader",
    "multi_threaded",
    "std",
] }
bytemuck = { version = "1", features = ["derive"] }
meshing = { path = "../meshing" }
rayon.workspace = true
world = { path = "../world" }
wgpu = { version = "27.0.1", default-features = false }

[dev-dependencies]
asset-compiler = { path = "../asset-compiler" }
image = { version = "0.25", default-features = false, features = ["png"] }
naga = { version = "27.0.3", features = ["wgsl-in"] }
sha2 = "0.10"
tempfile = "3"
wgpu = { version = "27.0.1", default-features = false, features = ["noop"] }
