[package]
name = "architecture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
toml = "0.9"

[dev-dependencies]
tempfile = "3"
