[package]
name = "visualcoverage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
assets = { path = "../../crates/assets" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
